# QMensa

./: .gitignore  CMakeLists.txt  README.md  main.cpp  menudefs.h  menureader.cpp  menureader.h  telegrammanager.cpp  telegrammanager.h
